--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.alibaba:fastjson:1.1.15'
     compile 'com.roughike:bottom-bar:2.1.1'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    testCompile 'junit:junit:4.12'
 }
