--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-    compile 'cn.lankton:flowlayout:3.1.0'
+    compile 'org.apmem.tools:layouts:1.10@aar'
 }
