--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".CommonActivity" />
         <activity android:name=".ProjectDetailActivity" />
         <activity android:name=".UnitProjectDetailActivity" />
-        <activity android:name=".ComponentDetailActivity"></activity>
+        <activity android:name=".ComponentDetailActivity" />
+        <activity android:name=".PZDetailActivity"></activity>
     </application>
 
 </manifest>
