--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.jacoli.roadsitesupervision"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -35,4 +35,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'org.apmem.tools:layouts:1.10@aar'
+
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
+
