--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -56,7 +56,8 @@
         <activity android:name=".ProjectDetailForInspectionActivity" />
         <activity android:name=".AssignedMatterDetailActivity" />
         <activity android:name=".AssignedMatterReplyActivity" />
-        <activity android:name=".AssignedMatterCreateActivity"></activity>
+        <activity android:name=".AssignedMatterCreateActivity" />
+        <activity android:name=".StaffsActivity"></activity>
     </application>
 
 </manifest>
