--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.feezu.liuli:timeselector:1.1.3'
 }
 
