--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,10 @@
         <activity android:name=".AssignedMatterReplyActivity" />
         <activity android:name=".AssignedMatterCreateActivity" />
         <activity android:name=".StaffsActivity" />
-        <activity android:name=".SupervisionPatrol.SupervisionPatrolListActivity"></activity>
+        <activity android:name=".SupervisionPatrol.SupervisionPatrolListActivity" />
+        <activity android:name=".SupervisionPatrol.SupervisionPatrolCreatingActivity" />
+        <activity android:name=".SupervisionPatrol.SupervisionPatrolDetailActivity" />
+        <activity android:name=".SupervisionPatrol.SupervisionPatrolProjectDetailActivity"></activity>
     </application>
 
 </manifest>
