--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
 
         <activity android:name=".SupervisionPatrol.SupervisionPatrolApprovalProcessActivity" />
         <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessActivity" />
-        <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessReplyActivity"></activity>
+        <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessReplyActivity" />
+        <activity android:name=".SupervisionPatrol.CheckItemsSelectionActivity"></activity>
     </application>
 
 </manifest>
