--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,8 @@
         <activity android:name=".SupervisionPatrol.SupervisionPatrolApprovalProcessActivity" />
         <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessActivity" />
         <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessReplyActivity" />
-        <activity android:name=".SupervisionPatrol.CheckItemsSelectionActivity"></activity>
+        <activity android:name=".SupervisionPatrol.CheckItemsSelectionActivity" />
+        <activity android:name=".SupervisionPatrol.SelectPersonActivity"></activity>
     </application>
 
 </manifest>
