--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,10 @@
         <activity android:name=".SupervisionPatrol.SupervisionPatrolNormalProcessReplyActivity" />
         <activity android:name=".SupervisionPatrol.CheckItemsSubSelectorActivity" />
         <activity android:name=".SupervisionPatrol.SelectPersonActivity" />
-        <activity android:name=".SupervisionPatrol.CheckItemsMainSelectorActivity"></activity>
+        <activity android:name=".SupervisionPatrol.CheckItemsMainSelectorActivity" />
+        <activity android:name=".ProgressCheck.ProjectDetailActivity" />
+        <activity android:name=".ProgressCheck.UnitProjectDetailActivity" />
+        <activity android:name=".ProgressCheck.ComponentDetailActivity"></activity>
     </application>
 
 </manifest>
