--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.feezu.liuli:timeselector:1.1.3'
+    compile 'com.kaopiz:kprogresshud:1.0.5'
 }
 
