--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <application
         android:name=".Upgrade.A"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_8002"
+        android:icon="@mipmap/ic_launcher_9008"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Light.NoTitleBar">
@@ -78,7 +78,8 @@
         <activity android:name=".SupervisionPatrol.CheckItemsMainSelectorActivity" />
         <activity android:name=".ProgressCheck.ProjectDetailActivity" />
         <activity android:name=".ProgressCheck.UnitProjectDetailActivity" />
-        <activity android:name=".ProgressCheck.ComponentDetailActivity"></activity>
+        <activity android:name=".ProgressCheck.ComponentDetailActivity" />
+        <activity android:name=".UserSystem.MainTabActivity"></activity>
     </application>
 
 </manifest>
