--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':falcon_scanner')
+
 
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
@@ -45,15 +47,14 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
     compile 'org.apmem.tools:layouts:1.10@aar'
-
     compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
     compile 'com.android.support:design:25.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.feezu.liuli:timeselector:1.1.3'
     compile 'com.kaopiz:kprogresshud:1.0.5'
+    testCompile 'junit:junit:4.12'
 }
+
 
