--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jacoli.roadsitesupervision">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,10 +20,11 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
+        tools:replace="android:label"
         android:name=".Upgrade.A"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_9003"
-        android:label="@string/app_name"
+        android:icon="${ICON_RES_VALUE}"
+        android:label="${APP_NAME_VALUE}"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity android:name=".LoginActivity">
