--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.jacoli.roadsitesupervision"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 104
-        versionName "1.4"
+        versionCode 105
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -169,7 +169,8 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.feezu.liuli:timeselector:1.1.3'
+    //compile 'com.feezu.liuli:timeselector:1.1.3'
+    compile 'com.github.yellowhai:TimeSelector:1.4'
     compile 'com.kaopiz:kprogresshud:1.0.5'
     testCompile 'junit:junit:4.12'
 }
