--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,22 @@
         <activity android:name=".ProgressCheck.UnitProjectDetailActivity" />
         <activity android:name=".ProgressCheck.ComponentDetailActivity" />
         <activity android:name=".UserSystem.MainTabActivity"></activity>
+
+
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="59191c4d8f4a9d0ce9000a73">
+        </meta-data>
+        <meta-data
+            android:name="UMENG_MESSAGE_SECRET"
+            android:value="c88831dcf5f353e156f8ed1e883be663">
+        </meta-data>
+
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="Channel ID" >
+        </meta-data>
+
     </application>
 
 </manifest>
