--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,17 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        tools:replace="android:label"
         android:name=".Upgrade.A"
         android:allowBackup="true"
         android:icon="${ICON_RES_VALUE}"
         android:label="${APP_NAME_VALUE}"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Light.NoTitleBar">
+        android:theme="@android:style/Theme.Light.NoTitleBar"
+        tools:replace="android:label">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -74,23 +75,19 @@
         <activity android:name=".ProgressCheck.ProjectDetailActivity" />
         <activity android:name=".ProgressCheck.UnitProjectDetailActivity" />
         <activity android:name=".ProgressCheck.ComponentDetailActivity" />
-        <activity android:name=".UserSystem.MainTabActivity"></activity>
-
+        <activity android:name=".UserSystem.MainTabActivity" />
 
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="59191c4d8f4a9d0ce9000a73">
-        </meta-data>
+            android:value="59191c4d8f4a9d0ce9000a73"></meta-data>
         <meta-data
             android:name="UMENG_MESSAGE_SECRET"
-            android:value="c88831dcf5f353e156f8ed1e883be663">
-        </meta-data>
-
+            android:value="c88831dcf5f353e156f8ed1e883be663"></meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Channel ID" >
-        </meta-data>
+            android:value="Channel ID"></meta-data>
 
+        <activity android:name=".MonitorMain.MonitorMainActivity"></activity>
     </application>
 
 </manifest>
