--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 def releaseTime() {
-    return new Date().format("yyyyMMddhhmm", TimeZone.getTimeZone("UTC"))
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
 }
 
 android {
@@ -16,10 +16,16 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    /*
+    * 版本记录：
+    * V1.6
+    * 新增320支架安全监测系统
+    * */
+
     sourceSets {
         main {
             res.srcDirs = [
-                    'src/main/res/layouts/monitor',
+                    'src/main/res/monitor',
                     'src/main/res/layouts',
                     'src/main/res'
             ]
@@ -186,25 +192,27 @@ dependencies {
     compile project(':falcon_scanner')
     compile project(':PushSDK')
 
-
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    //compile 'com.feezu.liuli:timeselector:1.1.3'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.alibaba:fastjson:1.1.15'
     compile 'com.roughike:bottom-bar:2.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
-    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    //compile 'com.feezu.liuli:timeselector:1.1.3'
     compile 'com.github.yellowhai:TimeSelector:1.4'
     compile 'com.kaopiz:kprogresshud:1.0.5'
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
+
 
 
 
