--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,15 +79,16 @@
 
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="59191c4d8f4a9d0ce9000a73"></meta-data>
+            android:value="59191c4d8f4a9d0ce9000a73" />
         <meta-data
             android:name="UMENG_MESSAGE_SECRET"
-            android:value="c88831dcf5f353e156f8ed1e883be663"></meta-data>
+            android:value="c88831dcf5f353e156f8ed1e883be663" />
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Channel ID"></meta-data>
+            android:value="Channel ID" />
 
-        <activity android:name=".MonitorMain.MonitorMainActivity"></activity>
+        <activity android:name=".MonitorMain.MonitorMainActivity" />
+        <activity android:name=".DataMonitor.MonitorPointListActivity"></activity>
     </application>
 
 </manifest>
