--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,20 @@ android {
     }
 
     buildTypes {
+        debug {
+            // 批量打包
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        //输出apk名称为：渠道名_版本名_时间.apk
+                        def fileName = "${variant.productFlavors[0].name}.apk"
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+                }
+            }
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -178,10 +192,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.yellowhai:TimeSelector:1.4'
     compile 'com.kaopiz:kprogresshud:1.0.5'
-    testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.6.0'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
+
 
 
 
