--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,8 @@
             android:value="Channel ID" />
 
         <activity android:name=".MonitorMain.MonitorMainActivity" />
-        <activity android:name=".DataMonitor.MonitorPointListActivity"></activity>
+        <activity android:name=".DataMonitor.MonitorPointListActivity" />
+        <activity android:name=".DataMonitor.MonitorSensorTypesActivity"></activity>
     </application>
 
 </manifest>
