--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,8 @@
 
         <activity android:name=".MonitorMain.MonitorMainActivity" />
         <activity android:name=".DataMonitor.MonitorPointListActivity" />
-        <activity android:name=".DataMonitor.MonitorSensorTypesActivity"></activity>
+        <activity android:name=".DataMonitor.MonitorSensorTypesActivity" />
+        <activity android:name=".DataMonitor.MonitorSensorListActivity"></activity>
     </application>
 
 </manifest>
