--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,14 +167,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
     compile project(':falcon_scanner')
     compile project(':PushSDK')
 
-    //compile 'com.feezu.liuli:timeselector:1.1.3'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.alibaba:fastjson:1.1.15'
     compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.android.support:support-v4:25.3.1'
@@ -187,8 +187,8 @@ dependencies {
     compile 'com.github.yellowhai:TimeSelector:1.4'
     compile 'com.kaopiz:kprogresshud:1.0.5'
     compile 'com.jakewharton:butterknife:8.6.0'
-    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'org.simple:androideventbus:1.0.5.1'
 }
 
 
