--- a/app/build.gradle
+++ b/app/build.gradle
@@ -189,6 +189,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'org.simple:androideventbus:1.0.5.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
 
 
